# Recall

./: .env.example  Explanation.md  eslint.config.mjs  package-lock.json  package.json
backend/: .env.development  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  health.py  middleware.py
backend/app/core/: errors.py  logging.py  security.py
backend/app/database/: __init__.py  base.py  mixins.py  session.py
backend/app/dependencies/: __init__.py  auth.py  db.py  pagination.py
backend/app/events/: __init__.py  bridge.py  publisher.py  types.py
backend/app/models/: __init__.py  chat.py  chunk.py  enums.py  jobs.py  knowledge.py  search.py  user.py  workspace.py
backend/app/repositories/: __init__.py  base.py  chat.py  jobs.py  knowledge.py  retrieval.py  user.py
backend/app/retrieval/: embedder.py  enrichment.py  metadata.py  reranker.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  knowledge.py  search.py  workspace.py
backend/app/services/: __init__.py  auth.py  cleanup.py  knowledge.py  retrieval.py  upload.py  workspace.py
backend/app/storage/: __init__.py  base.py  local.py  service.py
backend/migrations/: env.py
backend/recall_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  factories.py  test_api.py  test_embedder.py  test_enrichment.py  test_extractors.py  test_hybrid_search.py  test_models.py  test_processor.py  test_repositories.py  test_retrieval.py  test_vector_store.py  test_worker.py
src/app/: page.tsx  (+2 more)
(+249 files in other folders)
