[project]
name = "recall-backend"
version = "0.1.0"
description = "Recall — AI Knowledge Operating System (backend service + worker)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

# ML / pipeline dependencies are intentionally optional so the package installs
# (and CI runs) without GPU/network. Each seam lazy-imports its backend and
# raises a clear error if the corresponding extra is missing.
[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.7", "torch>=2.2"]
pgvector = ["pgvector>=0.2.5", "asyncpg>=0.29"]
redis = ["redis>=5.0"]
ocr = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
pdf = ["PyMuPDF>=1.24"]
transcription = ["openai-whisper>=20231117"]
captioning = ["transformers>=4.40", "pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
